<resources>
    <string name="app_name">My Java Application</string>
    <string name="welcomepicyure" />
    <string name="Stylemigration">Style migration</string>
    <string name="addtext">addtext</string>
    <string name="addphotoframe">addphotoframe</string>
    <string name="addaccessories">添加饰品</string>
    <string name="brightness">亮度</string>
    <string name="contrast">对比度</string>
    <string name="rotate">旋转</string>
    <string name="scale">裁剪</string>
    <string name="saturation">饱和度</string>
    <string name="styleChange">风格迁移</string>
    <string name="highResolution">超分辨率</string>
    <string name="addText">添加文字</string>
    <string name="setFrame">设置边框</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈</string>
    <string name="send">发送</string>
    <string name="edit">基本编辑</string>
    <string name="ai">AI美化</string>
    <string name="add">添加元素</string>
    <string name="language">语言</string>
    <string name="enus">English (en_US)</string>
    <string name="zhcn">简体中文 (zh_CN)</string>
    <string name="zhhk">繁體中文 (zh_HK)</string>
    <string name="finish">完成</string>
    <string name="圆角相框">圆角相框</string>
    <string name="圆形相框">圆形相框</string>
    <string name="ContactUs">联系我们</string>

    <string name="About">关于</string>
    <string name="sr_start">开始</string>
    <string name="sr_detail">超分辨率技术（Super-Resolution, SR）是指利用ESRGAN神经网络算法，能够在单一图像超分辨率中生成逼真的纹理。在一些称为“光学SR”的SR技术中，系统的衍射极限被超越；而在其他所谓的“几何SR”中，数位感光元件的分辨率因而提高。超分辨率成像技术用于一般图像处理中。</string>
</resources>
